feat: atomic province endpoint
